--- a/.env
+++ b/.env
@@ -20,14 +20,13 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-DB_DATABASE=C:/laragon/www/HealthTracker/database/database.sqlite
-DB_FOREIGN_KEYS=true
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=healthtracker 
+DB_USERNAME=root          
+DB_PASSWORD=              
+
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
